# cadrille

./: .env.example  .gitconfig  .gitignore  .netrc  CLAUDE.md  Dockerfile  Dockerfile.claude  README.md  cadrille.py  claude-container.sh  colab.ipynb  dataset.py  direction.md  entrypoint.sh  eval_results.md  install_open3d_apt.sh  mine_hard_examples.py  new_eval.md  plan.md  progress.md  pyproject.toml  pyrightconfig.json  requirements.txt  reward.py  reward_model_design.md  rl_train.py  test.py  tmp_comunication.md  train.py
bench/: bench_config.py
common/: __init__.py  datasets.py  essential_ops.py  essential_ops.yaml  essential_ops_simple.yaml  holdout.py  meshio.py  metrics.py  model.py  score_models.py
configs/: rl-s50k-lr3e-5-G16-cppo.yaml  sft-s120k-lr2e-4-b28a1-pc_img-default.yaml  sft-s120k-lr2e-4-b2a8-pc_img.yaml  sft-s120k-lr2e-4-b4a1-8gpu.yaml  sft-s12k-lr2e-4-b2a14-pc_img.yaml  sft-s600-lr3e-4-b2a4-pc_img.yaml
data/: README.md  cadrecode2mesh.py
data_prep/: build_benchcad_easy.py  build_holdout_split.py  build_holdout_v2.py  create_smoke_dataset.py  fetch_benchcad.py  fetch_cad_sft.py  fetch_cadrecode_full.py  gen_repair_data.py  generate_simple_op_specs.py  hf_reorg.py  holdout_30_families.txt  import_benchcad_easy.py  import_benchcad_simple.py  make_benchcad_partial_pkl.py  merge_benchcad_easy_renders.py  monitor_benchcad_easy.sh  prepare_hf_cadrecode.py  prepare_hf_cadrecode_v2.py  prerender_dataset.py  push_bench_to_hf.py  render_benchcad_easy.py  render_iso_val_stls.py  render_text2cad.py  repack_recode_to_bench.py  repack_text2cad_to_bench.py  rewrite_recode_to_benchcad_v2.py  run_benchcad_easy_batches.sh  run_benchcad_easy_upload.sh  run_recode_bench_50k_batches.sh  upload_mined.py  upload_shards_to_hula0401.py  verify_recode_rewrite.py
docker/: Dockerfile.claude  Dockerfile.official  entrypoint.sh
docs/: cad_bench_722_baselines.md  (+17 more)
(+306 files in other folders)
